--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,45 @@
+@import url(./reset.css);
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
+@import './background-colors';
+@import './text-colors';
+@import './gradients';
+@import './rounded-borders';
+
 body {
   background: url('../img/background-repetition.jpg') 0 26px;
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-size: 14px;
+  color: #fff;
 }
 
 .wrapper {
   width: 980px;
+  margin: 0 auto;
+}
+
+ul.user {
+  font-size: 0;
+  margin-left: 344px;
+  
+  li {
+    @include roundBottomBorders;
+    font-size: 14px;
+    font-weight: 700;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    width: 123px;
+    padding: 5px 0;
+    background: map-get($gradients, lightgray-gradient);
+  }
+
+  li:not(:first-child) {
+    margin-left: 4px;
+  }
+}
+
+.shop-phone {
+  font-size: 24px;
+  font-weight: 700;
+  margin-left: 344px;
 }
