--- a/scss/_background-colors.scss
+++ b/scss/_background-colors.scss
@@ -1,7 +1,5 @@
-$background-colors: (
-  "banner-bg": #000,
-  "section-bg": #1d1d1d,
-  "subsection-bg": #333,
-  "button-bg": #ba9835,
-  "goods-bg": #666
-);
+  $banner-bg: #000;
+  $section-bg: #1d1d1d;
+  $subsection-bg: #333;
+  $button-bg: #ba9835;
+  $goods-bg: #666;
