--- a/scss/_text-colors.scss
+++ b/scss/_text-colors.scss
@@ -1,9 +1,7 @@
-$text-colors: (
-  "gray-text": #a9a9a9,
-  "gray-order-text": #969696,
-  "blue-text": #3ec1f8,
-  "bright-yellow-text": #dbdb13,
-  "price-text": #ba9835,
-  "button-text": #c39b25,
-  "article-head-text": #bf9f3f
-);
+$gray-text: #a9a9a9;
+$gray-order-text: #969696;
+$blue-text: #3ec1f8;
+$bright-yellow-text: #dbdb13;
+$price-text: #ba9835;
+$button-text: #c39b25;
+$article-head-text: #bf9f3f;
